2007-11-03  Jens Granseuer  <jensgr@gmx.net>

	* gnome-about-me-password.c: (io_watch_stdout): add another string to
	the list of recognized error returns from passwd ("must choose a longer
	password")

2007-08-21  Jens Granseuer  <jensgr@gmx.net>

	* gnome-about-me.c: (about_me_setup_email): fix the last commit to use
	proper API to release the VCardAttributes so we don't crash with newer
	e-d-s (bug #468848)

2007-08-21  Jens Granseuer  <jensgr@gmx.net>

	* gnome-about-me.c: honour mail address attributes when setting
	up Home and Work addresses

2007-07-31  Jens Granseuer  <jensgr@gmx.net>

	* gnome-about-me.c: (about_me_image_clicked_cb): use
	g_get_user_special_dir() instead of hardcoding ~/Pictures

2007-07-23  Jens Granseuer  <jensgr@gmx.net>

	* gnome-about-me.glade: add a tooltip to the image button to make it
	accessible

2007-06-23  Guilherme de S. Pastore  <gpastore@gnome.org>

	* gnome-about-me-password.c: fix a small typo ("wether" -> "whether")
	  in the comments.

2007-04-30  Bastien Nocera  <hadess@hadess.net>

	* gnome-about-me.c: (about_me_update_photo): Use g_file_set_contents
	instead of a single fwrite to write the ~/.face image, also set the
	default permission to be 0644, even if the umask is more permissive,
	otherwise GDM won't show the icon in the chooser (Closes: #433898)

2007-04-27  Rodrigo Moya <rodrigo@gnome-db.org>

	* gnome-about-me.desktop.in.in: renamed Bugzilla product.

2007-04-21  Jens Granseuer  <jensgr@gmx.net>

	* gnome-about-me.c: (about_me_setup_dialog): don't print a warning to
	the console if the "self" contact does not yet exist (closes bug
	#419332). Also fix a small memory leak

2007-04-08  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Kristof Vansant <de_lupus@pandora.be>

	* gnome-about-me.c: (about_me_image_clicked_cb): add image filter to
	file chooser (closes bug #424958)

2007-03-19  Jens Granseuer  <jensgr@gmx.net>

	Based on a patch by: Bastien Nocera <hadess@hadess.net>
